--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server",
   "type": "module",
   "scripts": {
-    "start": "nodemon server",
+    "start": "node server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
